# crawlFullStack

./: .browser-echo-mcp.json  .gitignore  .markdownlint.json  AGENTS-objective_2.md  AGENTS.md  README.md  Web crawling tool guide.md  crawl.config.yml  frontmatter-example.txt  main.py  mypy.txt  package.json  pnpm-lock.yaml  pyproject.toml
.archived/: index.json
.archived/data/part0/: 01-fundamentals-of-web-apps.md
.archived/data/part1/: 01-fullstack-part1.md
.archived/data/part10/: 01-introduction-to-react-native.md  01-react-native-basics.md  01-testing-and-extending-our-application.md
.archived/data/part11/: 01-fullstack-part11.md  01-getting-started-with-github-actions.md  01-introduction-to-ci-cd.md  01-keeping-green.md
.archived/data/part12/: 01-building-and-configuring-environments.md  01-fullstack-part12.md  01-introduction-to-containers.md
.archived/data/part13/: 01-fullstack-part13.md  01-join-tables-and-queries.md  01-using-relational-databases-with-sequelize.md
.archived/data/part2/: 01-getting-data-from-server.md  01-rendering-a-collection-modules.md
.archived/data/part3/: 01-fullstack-part3.md  01-saving-data-to-mongodb.md
.archived/data/part4/: 01-fullstack-part4.md
.archived/data/part5/: 01-end-to-end-testing-cypress.md  01-login-in-frontend.md
.gemini/: GEMINI.md
.githooks/: pre-commit
.ruler/: AGENTS.md
docs/: Repo as development guide.md
src/: .codefetchignore  .gitignore  index.json  seeds.txt
src/data/: .markdownlint-cli2.jsonc  .markdownlint.json
src/data/about/: 01-general.md
src/fullstackopen_en_repo/: crawl_fullstackopen.py  indexing.py  link_rewriter.py  linkcheck.py  markdown_utils.py  postprocess.py  utils_slug.py
src/fullstackopen_en_repo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config_site_profile.py  test_link_rewriter.py  test_markdown_utils.py  test_nextjs_profile.py
(+99 files in other folders)
